--- a/frontend_vanilla/style.css
+++ b/frontend_vanilla/style.css
@@ -330,7 +330,7 @@ p {
   animation: spin 7s linear infinite reverse;
 }
 
-}
+
 
 @keyframes spin {
   from {
@@ -353,6 +353,7 @@ p {
     justify-content: center;
     align-items: center;
     z-index: 1000;
+    -webkit-backdrop-filter: blur(5px);
     backdrop-filter: blur(5px);
     transition: opacity 0.3s ease;
 }
